# secured-rust

./: Cargo.toml  README.md  TODO.md
annotations/: Cargo.toml
annotations/src/: lib.rs
src/: main.rs  simple.rs
src/config/: conditions.json
src/graphs/: for.dot  simple.dot
src/graphs/goal/: graph.dot
src/tests/: for.rs  simple.rs
