workspace = { members = ["annotations"] }
[package]
name = "rust_ast_parser"
version = "0.1.0"
authors = ["vasilevlaicu <patriciu.vlaicu@student.uclouvain.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
proc-macro2 = "1.0"
annotations = { path = "./annotations" }
syn = { version = "1.0", features = ["full", "visit"] }
quote = "1.0"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
